<resources>
    <string name="app_name">msm</string>
    <string name="label_monitoring">Monitoring</string>
    <string name="label_controlling">Controlling</string>
    <string name="label_setting">Pengaturan</string>
    <string name="label_change_setting">Ubah Pengaturan</string>
    <string name="label_login">Login</string>
    <string name="label_mushroom_growers">Mushroom Growers</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_masuk">Masuk</string>
    <string name="label_registrasi">Registrasi</string>
    <string name="label_jadwal_penyiraman">Jadwal Penyiraman</string>
    <string name="label_penyiraman_satu">Penyiraman 1</string>
    <string name="label_penyiraman_dua">Penyiraman 2</string>
    <string name="label_penyiraman_tiga">Penyiraman 3</string>
    <string name="label_batas_suhu">Batas Suhu</string>
    <string name="label_batas_atas_suhu">Batas Atas Suhu</string>
    <string name="label_celcius">C</string>
    <string name="label_batas_bawah_suhu">Batas Bawah Suhu</string>
    <string name="label_batas_kelembaban">Batas Kelembaban</string>
    <string name="label_batas_atas_kelembapan">Batas Atas Kelembapan</string>
    <string name="label_percent">%</string>
    <string name="label_batas_bawah_kelembapan">Batas Bawah Kelembapan</string>
    <string name="label_ubah">Ubah</string>
    <string name="label_logout">Keluar</string>
    <string name="label_suhu">Suhu</string>
    <string name="label_kelembapan">Kelembapan</string>
    <string name="label_view_image">Lihat Gambar</string>
    <string name="label_blower">Blower</string>
    <string name="label_lampu">Lampu</string>
    <string name="watering_duration">Durasi penyiraman</string>
    <string name="label_automatic">Otomatis</string>
    <string name="label_save">Simpan</string>
    <string name="label_watering">Penyiraman Air</string>
    <string name="label_age">Usia</string>
    <string name="label_date">Tanggal</string>
    <string name="label_set">Set</string>
    <string name="label_cancel">Batal</string>
    <string name="label_select_time">Pilih waktu</string>
    <string name="label_warning">Peringatan</string>
    <string name="label_ok">OK</string>
    <string name="label_cannot_activate_before_config_set">Tidak dapat mengaktifkan, Konfigurasi belum di set</string>
    <string name="label_cannot_be_changed_auto_config_turned_on">Tidak dapat mengubah, otomatis sedang dinyalakan</string>
    <string name="label_turn_on_successfully">Berhasil mengaktifkan</string>
    <string name="label_turn_off_successfully">Berhasil mematikan</string>
    <string name="label_configuration_changed_successfully">Berhasil mengubah konfigurasi</string>
    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="label_second">Detik</string>
    <string name="label_age_reset">Reset usia</string>
</resources>